# coroutineFSortAio

./: .gitignore  CMakeLists.txt  README.md  checkTest.sh  generateTest.sh  sort.sh  task_eng.txt  task_rus.txt  test.sh
src/: coSort.c  coSort.h  stack.c  stack.h  stackArrays.c  stackArrays.h
src/tests/: coSort.c  coSort.h
